# dotfilish

./: .gitignore  README.md  pyproject.toml
